AC_INIT(src/GameMain.cpp)

dnl otherwise autoconf whines
AC_CANONICAL_TARGET()
AM_INIT_AUTOMAKE(xmoto,0.3.0)
AC_GNU_SOURCE

AC_PROG_CXX
AC_PROG_CPP
AC_PROG_INSTALL

AC_C_BIGENDIAN(AC_DEFINE([XMOTO_BIG_ENDIAN]),
  AC_DEFINE([XMOTO_LITTLE_ENDIAN]))

dnl sqlite
AC_CHECK_HEADERS([sqlite3.h],[SQLITE_LIBS=-lsqlite3],[AC_MSG_ERROR("sqlite3 required")])
AC_CHECK_LIB(sqlite3, main,[],[AC_MSG_ERROR("Linking against sqlite3 failed.")])
AC_SUBST(SQLITE_LIBS)

dnl libz before png!
AC_CHECK_LIB(z, uncompress, [], [AC_MSG_ERROR(zlib required)])

AC_CHECK_LIB(jpeg, jpeg_CreateCompress, [], [AC_MSG_ERROR(libjpeg required)])
AC_CHECK_LIB(png, png_read_image, [], [AC_MSG_ERROR(libpng required)])

if test "$target_os" != "mingw32" # on windows, include libbz2
then
  AC_CHECK_LIB(bz2, BZ2_bzReadOpen, [], [AC_MSG_ERROR(libbz2 required)])
fi

if test "$target_os" = "mingw32" # others libraries required by mingw32
then
  MINGW32_LIBS="-lmingw32 -lSDLmain -lSDL -lopengl32 -mwindows -luserenv -lintl -lode xmoto_icone.o" # -mwindows to avoid dos window
  AC_SUBST([MINGW32_LIBS])
fi
AM_CONDITIONAL([WIN32], test "$target_os" = "mingw32")

AM_PATH_SDL(1.0.0, [], [AC_MSG_ERROR(SDL required)])
AC_SDL_CHECK_LIB(SDL_mixer, Mix_OpenAudio, [], [AC_MSG_ERROR(SDL_mixer required)])

dnl sdl_ttf
AC_CHECK_HEADERS([SDL/SDL_ttf.h],[],[AC_MSG_ERROR(SDL_ttf headers required)])
AC_SDL_CHECK_LIB(SDL_ttf, TTF_OpenFont, [], [AC_MSG_ERROR(SDL_ttf lib required)])

dnl Put OpenGL
AC_ARG_WITH([renderer-openGl],
  [AS_HELP_STRING([--with-renderer-openGl=0|1],
    [RendererOpenGl])],
  [USE_OPENGL="$withval"],
  [USE_OPENGL="1"]
)
AC_SUBST([USE_OPENGL])

if test "$USE_OPENGL" = "1"
then
  AX_CHECK_GL()
fi

dnl Put SDL_gfx
AC_ARG_WITH([renderer-sdlGfx],
  [AS_HELP_STRING([--with-renderer-sdlGfx=0|1],
    [RendererSdlGfx])],
  [USE_SDLGFX="$withval"],
  [USE_SDLGFX="0"]
)
AC_SUBST([USE_SDLGFX])

if test "$USE_SDLGFX" = "1"
then
  AC_SDL_CHECK_LIB(SDL_gfx, pixelColor, [], [AC_MSG_ERROR(SDL_gfx required)])
fi

AC_SEARCH_LIBS(lua_pushboolean,lua lua5.1 lua50, [], [AC_MSG_ERROR(liblua5.1, liblua50, or liblua required)])
AC_SEARCH_LIBS(luaopen_math,lualib lualib5.1 lualib50, [], [AC_MSG_ERROR(liblualib5.1, liblualib50, or liblualib required)])

dnl ***** Check lua headers, as they are prone to be located random places on random systems! *****
dnl The following three lines where suggested by Eric Piel, but they don't seem to work on my system
dnl AC_CHECK_HEADERS(lua.h lua/lua.h lua50/lua.h, [break], [AC_MSG_ERROR(Could not find lua.h)])
dnl AC_CHECK_HEADERS(lauxlib.h lua/lauxlib.h lua50/lauxlib.h, [break], [AC_MSG_ERROR(Could not find luaxlib.h)])
dnl AC_CHECK_HEADERS(lualib.h lua/lualib.h lua50/lualib.h, [break], [AC_MSG_ERROR(Could not find lualib.h)])

AC_CHECK_HEADER(lua5.1/lua.h,AC_DEFINE(HAVE_LUA51_LUA_H),[])
AC_CHECK_HEADER(lua5.1/lauxlib.h,AC_DEFINE(HAVE_LUA51_LAUXLIB_H),[])
AC_CHECK_HEADER(lua5.1/lualib.h,AC_DEFINE(HAVE_LUA51_LUALIB_H),[])

AC_CHECK_HEADER(lua50/lua.h,AC_DEFINE(HAVE_LUA50_LUA_H),[])
AC_CHECK_HEADER(lua50/lauxlib.h,AC_DEFINE(HAVE_LUA50_LAUXLIB_H),[])
AC_CHECK_HEADER(lua50/lualib.h,AC_DEFINE(HAVE_LUA50_LUALIB_H),[])

AC_CHECK_HEADER(lua/lua.h,AC_DEFINE(HAVE_LUA_LUA_H),[])
AC_CHECK_HEADER(lua/lauxlib.h,AC_DEFINE(HAVE_LUA_LAUXLIB_H),[])
AC_CHECK_HEADER(lua/lualib.h,AC_DEFINE(HAVE_LUA_LUALIB_H),[])

AC_CHECK_HEADER(lua.h,AC_DEFINE(HAVE_LUA_H),[])
AC_CHECK_HEADER(lauxlib.h,AC_DEFINE(HAVE_LAUXLIB_H),[])
AC_CHECK_HEADER(lualib.h,AC_DEFINE(HAVE_LUALIB_H),[])

AC_LANG_PUSH([C++])

if test "$target_os" != "mingw32" # make me crazy to detect it because it compiles
then
  AC_SEARCH_LIBS(dJointAttach,ode, [], [AC_MSG_ERROR(libode required)], -lstdc++)
fi

AC_LANG_POP()

AC_CHECK_LIB(curl, curl_easy_init,[],[AC_MSG_ERROR(libcurl required)])

ALL_LINGUAS="fr de es ca sk no"
AM_GNU_GETTEXT()

dnl Put LOCALESDIR in makefiles
AC_ARG_WITH([localesdir],
  [AS_HELP_STRING([--with-localesdir=DIR],
    [Override the default directory for locales])],
  [LOCALESDIR="$withval"],
  [LOCALESDIR="$datadir/locale"]
)
if test "$target_os" = "mingw32"
then
  LOCALESDIR="locale"
fi
AC_SUBST([LOCALESDIR])

dnl Put GAMEDATADIR in makefiles
AC_ARG_WITH([gamedatadir],
  [AS_HELP_STRING([--with-gamedatadir=DIR],
    [Override the default directory for game data])],
  [GAMEDATADIR="$withval"],
  [GAMEDATADIR="$datadir/$PACKAGE"]
)
AC_SUBST([GAMEDATADIR])

dnl Put ALLOW_ZOOMING in makefiles
AC_ARG_WITH([enable-zoom],
  [AS_HELP_STRING([--with-enable-zoom=0|1],
    [Enable zoom])],
  [ALLOW_ZOOMING="$withval"],
  [ALLOW_ZOOMING="0"]
)
AC_SUBST([ALLOW_ZOOMING])

dnl Can't build xmoto.bin if we're cross-compiling
AM_CONDITIONAL(CROSS_COMPILING,test "$cross_compiling" = yes)

AC_OUTPUT(Makefile       \
          bin/Makefile   \
          po/Makefile.in \
          src/Makefile   \
          extra/Makefile         \
         )

# display is something is missing

function displayRequirement {
  STUFF="$1"
  VAR="$2"
  GOOD_RES="$3"
  REQ="$4"

  if test "$VAR" = "$GOOD_RES"; then
    printf "| %15s | %10s | %51s |\n" "$STUFF" "enabled" "($REQ)"
  else
    printf "| %15s | %10s | %51s |\n" "$STUFF" "disabled" "($REQ missing)"
  fi
}

use_gettext=no
if test "$gt_cv_func_gnugettext1_libc" = "yes"
then
  use_gettext="yes"
fi
if test "$gt_cv_func_gnugettext1_libintl" = "yes"
then
  use_gettext="yes"
fi

echo
echo   "+-----------------+------------+-----------------------------------------------------+"
displayRequirement "Locales" "$use_gettext" "yes" "gettext"
echo   "+-----------------+------------+-----------------------------------------------------+"
displayRequirement "Zoom" "$with_enable_zoom" "1" "--with-enable-zoom=1"
echo   "+-----------------+------------+-----------------------------------------------------+"
displayRequirement "OpenGl" "$USE_OPENGL" "1" "--with-renderer-openGl=1"
echo   "+-----------------+------------+-----------------------------------------------------+"
displayRequirement "sdlGfx" "$USE_SDLGFX" "1" "--with-renderer-sdlGfx=1 (unsafe)"
echo   "+-----------------+------------+-----------------------------------------------------+"
echo "target os: ""$target_os"
